import net.fabricmc.loom.task.ValidateMixinNameTask
import net.fabricmc.loom.util.gradle.SourceSetHelper
import net.fabricmc.loom.util.gradle.SourceSetReference

buildscript {
    repositories {
        gradlePluginPortal()
        maven { url = 'https://maven.parchmentmc.org' }
        maven { url = "https://maven.fabricmc.net/" }
    }
}

plugins {
    id 'idea'
    id 'fabric-loom' version '1.11.+'
    id 'maven-publish'
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

def fabricModules = [
        "fabric-data-generation-api-v1",
        "fabric-loot-api-v3",
        "fabric-model-loading-api-v1",
        "fabric-registry-sync-v0",
        "fabric-renderer-api-v1",
        "fabric-resource-conditions-api-v1",
        "fabric-transfer-api-v1"
]

repositories {
    maven { // Parchment
        name = 'ParchmentMC'
        url = 'https://maven.parchmentmc.org'
    }
    maven {  // FAPI, Loader
        url = "https://maven.fabricmc.net/"
    }
}

group = project.maven_group
version = "${project.minecraft_version}-${project.mod_version}.${getBuildNumber()}${getStable()}"
logger.lifecycle("${project.name} version: ${project.version}")

base {
    archivesName = "${mod_id}"
}

fabricApi {
    configureTests {
        createSourceSet = true
        modId = "${project.name}-gametest"
        eula = true
    }
}

sourceSets {
    testmod {
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
    }
    gametest {
        compileClasspath += testmod.compileClasspath
        runtimeClasspath += testmod.runtimeClasspath

        resources {
            srcDirs += [
                    'src/gametest/generated'
            ]
        }
    }
}

loom {
    runtimeOnlyLog4j = true

    accessWidenerPath = file("src/main/resources/${mod_id}.accesswidener")

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }

    runs {
        datagen {
            server()
            name "Gametest Data Generation"
            vmArg "-Dfabric-api.datagen"
            vmArg "-Dfabric-api.datagen.output-dir=${file("src/gametest/generated")}"
            vmArg "-Dfabric-api.datagen.strict-validation"
            source sourceSets.testmod

            ideConfigGenerated = false
            runDir "build/run/gametest-datagen"
        }

        client {
            client()

            configName = "Minecraft Client ${project.minecraft_version}"
            runDir "run/${project.minecraft_version}"

            property("mixin.debug.export=true") // export all mixins
            property("mixin.debug.strict.unique=true") // strictly enforce that @Unique things are private
            property("mixin.debug.countInjections=true")
            vmArg("-XX:+AllowEnhancedClassRedefinition")
            if (System.getenv("HOTSWAP_AGENT") != null) {
                property("fabric.systemLibraries=" + System.getenv("HOTSWAP_AGENT"))
                vmArg("--add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
                vmArg("--add-opens=java.base/java.lang=ALL-UNNAMED")
                vmArg("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
                vmArg("--add-opens=java.base/java.io=ALL-UNNAMED")
                vmArg("--add-opens=java.desktop/java.beans=ALL-UNNAMED")
                vmArg("--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED")
            }

            try {
                afterEvaluate {
                    def mixinDep = this.configurations.compileClasspath.incoming.artifactView {
                        componentFilter {
                            it instanceof ModuleComponentIdentifier
                                    && it.module == "sponge-mixin"
                        }
                    }

                    if (mixin != null) {
                        vmArg("-javaagent:${mixinDep.files.first().path}")
                        println("[Info]: Mixin Hotswap setup finished")
                    } else {
                        println("[Warning]: Unable to locate file path for Mixin jar")
                    }
                }
            } catch (Exception e) {
                println("[Error]: Mixin Hotswap setup failed!")
                e.printStackTrace()
            }
        }

        server {
            server()

            configName = "Minecraft Server ${project.minecraft_version}"
            runDir "run/${project.minecraft_version}"
        }
    }
}

configurations.configureEach {
    resolutionStrategy {
        force "net.fabricmc:fabric-loader:$project.loader_version"
        force "net.fabricmc.fabric-api:fabric-api:$project.fabric_version"
    }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings(loom.layered {
        it.officialMojangMappings()
        it.parchment("org.parchmentmc.data:parchment-${project.parchment_minecraft_version}:${project.parchment_mappings_version}@zip")
    })

    modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")
    fabricModules.forEach {
        modImplementation(fabricApi.module(it, project.fabric_version))
    }

    implementation("javax.annotation:javax.annotation-api:1.3.2")
    implementation("com.google.code.findbugs:jsr305:3.0.2")

    testmodImplementation sourceSets.main.output

    gametestImplementation sourceSets.testmod.output
    modGametestImplementation fabricApi.module("fabric-gametest-api-v1", project.fabric_version)
    modGametestImplementation fabricApi.module("fabric-resource-loader-v0", project.fabric_version)

    testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.+'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.+'
    testImplementation "org.mockito:mockito-core:5.10.+"
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.+'
}

runDatagen {
    outputs.dir file("src/gametest/generated")
}

test {
    dependsOn("processResources")

    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

processGametestResources.dependsOn(runDatagen)

tasks.register('validateMixinNames', ValidateMixinNameTask) {
    source(sourceSets.main.output)
}

tasks.named("compileJava") {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

java {
    withSourcesJar()
    // loom requires java >= 21
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.mod_id}"}
    }
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_version", project.minecraft_version
    inputs.property "loader_version", project.loader_version
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version,
                "minecraft_version": project.minecraft_version,
                "loader_version": project.loader_version
    }
}

// Fix to make IDEA load the correct resources when build and run is delegated to it
tasks.register('fixIntelliJResources', Copy) {
    def ideaModuleCompileOutputPath = SourceSetHelper.getIdeaModuleCompileOutput(new SourceSetReference(sourceSets.main, project))
    if (ideaModuleCompileOutputPath.empty)
        return

    dependsOn processResources
    group = "fabric"

    from processResources
    into ideaModuleCompileOutputPath[1]
}

static def getBuildNumber() {
    if (System.getenv("GITHUB_RUN_NUMBER") != null) {
        return System.getenv("GITHUB_RUN_NUMBER").toString()
    }
    return "9999"
}

static def getStable() {
    if (System.getenv("GITHUB_REF") == null || System.getenv("GITHUB_REF").endsWith("-dev")) {
        return "-SNAPSHOT"
    }
    return ""
}

publishing {
    publications {
        register("mavenJava", MavenPublication) {
            artifactId = mod_id
            from components.java
        }
    }
}